--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,13 +57,13 @@ android {
     productFlavors {
     dev {
         dimension "flavors"
-        resValue "string", "app_name", "FSA Dev"
+        resValue "string", "app_name", "Diet App Dev"
         applicationIdSuffix ".dev"
         versionNameSuffix "-dev"
     }
     prod {
         dimension "flavors"
-        resValue "string", "app_name", "FSA"
+        resValue "string", "app_name", "Diet App"
     }
 }
 }
