--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   package_info: ^2.0.2
   dio: ^4.0.0
   flutter_keyboard_visibility: ^5.0.2
+  adobe_xd: ^2.0.0+1
+  carousel_slider: ^4.0.0
+  flutter_svg: ^0.21.0+1
+  another_xlider: ^1.0.0
+  intl: ^0.17.0
+  percent_indicator: ^3.0.1
 
 dev_dependencies:
   build_runner: ^1.0.0
