--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -37,35 +38,33 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutter_starter_app"
+        applicationId "com.pocketsystems.dietapp"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
     }
 
     flavorDimensions "flavors"
     productFlavors {
-    dev {
-        dimension "flavors"
-        resValue "string", "app_name", "Diet App Dev"
-        applicationIdSuffix ".dev"
-        versionNameSuffix "-dev"
+        dev {
+            dimension "flavors"
+            resValue "string", "app_name", "Diet App Dev"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+        prod {
+            dimension "flavors"
+            resValue "string", "app_name", "Diet App"
+        }
     }
-    prod {
-        dimension "flavors"
-        resValue "string", "app_name", "Diet App"
-    }
-}
 }
 
 flutter {
@@ -74,4 +73,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:multidex:1.0.3'
 }
