--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_starter_app
-description: Flutter starter app
+name: diet_app
+description: Diet App for helping you to achieve your fitness goals!
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -28,7 +28,6 @@ dependencies:
   stacked: ^2.1.8
   stacked_services: ^0.8.7
   get_it: ^7.1.4
-  observable_ish: ^3.0.0
   package_info: ^2.0.2
   dio: ^4.0.0
   flutter_keyboard_visibility: ^5.0.2
@@ -38,6 +37,15 @@ dependencies:
   another_xlider: ^1.0.0
   intl: ^0.17.0
   percent_indicator: ^3.0.1
+  flutter_rounded_date_picker: ^2.0.2
+  cached_network_image: ^3.1.0
+  image_picker: ^0.8.2
+  
+  # Firebase
+  firebase_core: "^1.4.0"
+  firebase_auth: "^3.0.1"
+  cloud_firestore: "^2.4.0"
+  firebase_storage: "^10.0.1"
 
 dev_dependencies:
   build_runner: ^1.0.0
