--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rounded_date_picker: ^2.0.2
   cached_network_image: ^3.1.0
   image_picker: ^0.8.2
+  rive: ^0.7.6
   
   # Firebase
   firebase_core: "^1.4.0"
@@ -48,10 +49,9 @@ dependencies:
   firebase_storage: "^10.0.1"
 
 dev_dependencies:
-  build_runner: ^1.0.0
-  assets_indexer: ^0.0.9
-  stacked_generator: ^0.4.6
-
+  assets_indexer: ^0.0.10
+  stacked_generator: ^0.5.0
+  build_runner: ^2.1.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
@@ -63,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
