--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  platform: ^3.1.0
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.3
   stacked: ^2.1.8
