--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.2
   rive: ^0.7.6
   youtube_player_flutter: ^8.0.0
+  expandable: ^5.0.1
   
   # Firebase
   firebase_core: "^1.4.0"
