--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,24 +25,24 @@ dependencies:
     sdk: flutter
   platform: ^3.1.0
   connectivity: ^3.0.6
-  cupertino_icons: ^1.0.3
-  stacked: ^2.3.6
-  stacked_services: ^0.8.22+1
+  cupertino_icons: ^1.0.4
+  stacked: ^2.3.8
+  stacked_services: ^0.8.24
   get_it: ^7.2.0
   package_info: ^2.0.2
-  dio: ^4.0.0
-  flutter_keyboard_visibility: ^5.0.2
-  adobe_xd: ^2.0.0+1
-  carousel_slider: ^4.0.0
-  flutter_svg: ^0.21.0+1
-  another_xlider: ^1.0.0
+  dio: ^4.0.6
+  flutter_keyboard_visibility: ^5.2.0
+  adobe_xd: ^2.0.1
+  carousel_slider: ^4.1.1
+  flutter_svg: ^1.1.0
+  another_xlider: ^1.1.0
   intl: ^0.17.0
   percent_indicator: ^4.2.2
-  flutter_rounded_date_picker: ^2.0.2
-  cached_network_image: ^3.2.0
-  image_picker: ^0.8.2
-  rive: ^0.7.6
-  youtube_player_flutter: ^8.0.0
+  flutter_rounded_date_picker: ^3.0.1
+  cached_network_image: ^3.2.1
+  image_picker: ^0.8.5+3
+  rive: ^0.8.4
+  youtube_player_flutter: ^8.1.0
   expandable: ^5.0.1
   
   # Firebase
@@ -53,12 +53,12 @@ dependencies:
 
   # Local DB
   floor: ^1.2.0
-  shared_preferences: ^2.0.8
+  shared_preferences: ^2.0.15
 
   #alarm
-  flutter_local_notifications: ^8.2.0 
+  flutter_local_notifications: ^9.5.3+1
 
-  # debugging
+    # debugging
   #flutter_stetho:
   #  git: 
   #    url: git://github.com/jasonlewicki/flutter_stetho.git
@@ -72,12 +72,12 @@ dependencies:
 
 dev_dependencies:
   assets_indexer: ^0.0.10
-  stacked_generator: ^0.6.2
+  stacked_generator: ^0.6.5
   floor_generator: ^1.2.0
-  build_runner: ^2.1.10
+  build_runner: ^2.1.11
 
 dependency_overrides:
-  analyzer: ^4.0.0
+  analyzer: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
